config: enable CRAMFS

--- a/configs/zynq_zc702_defconfig
+++ b/configs/zynq_zc702_defconfig
@@ -527,6 +527,7 @@ CONFIG_CMD_MISC=y
 # Filesystem commands
 #
 # CONFIG_CMD_BTRFS is not set
+CONFIG_CMD_CRAMFS=y
 CONFIG_CMD_EXT2=y
 CONFIG_CMD_EXT4=y
 CONFIG_CMD_EXT4_WRITE=y
@@ -1104,7 +1105,7 @@ CONFIG_FS_FAT=y
 CONFIG_FAT_WRITE=y
 CONFIG_FS_FAT_MAX_CLUSTSIZE=65536
 # CONFIG_FS_JFFS2 is not set
-# CONFIG_FS_CRAMFS is not set
+CONFIG_FS_CRAMFS=y
 # CONFIG_YAFFS2 is not set
 
 #
